@@ -1244,9 +1244,9 @@
 //-- WL_SOULEXPANSION
 2202,3000,500,0,0,0,0
 //-- WL_FROSTMISTY
-2203,3000,2000,10000,0,20000,0
+2203,2000,2000,8000,0,20000,0
 //-- WL_JACKFROST
-2204,4000,2500,0,0,20000,0
+2204,2500,2000,0,0,20000,0
 //-- WL_MARSHOFABYSS
 2205,4000,1000,0,0,5000:10000:15000:20000:25000,0
 //-- WL_RECOGNIZEDSPELL
